[gd_scene load_steps=90 format=2]

[ext_resource path="res://Assets/Skeleton/Sprite Sheets/Skeleton Idle.png" type="Texture" id=1]
[ext_resource path="res://Sound/Skt_gethit.ogg" type="AudioStream" id=2]
[ext_resource path="res://Assets/Skeleton/Sprite Sheets/Skeleton Walk.png" type="Texture" id=3]
[ext_resource path="res://Assets/Skeleton/Sprite Sheets/Skeleton Attack.png" type="Texture" id=4]
[ext_resource path="res://Assets/Skeleton/Sprite Sheets/Skeleton Hit.png" type="Texture" id=5]
[ext_resource path="res://Assets/Skeleton/Sprite Sheets/Skeleton Dead.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Enemies/HitEffect.tres" type="Material" id=7]
[ext_resource path="res://Sound/SktMelee0.5sekdelay.mp3" type="AudioStream" id=8]
[ext_resource path="res://Sound/SKTDeath.mp3" type="AudioStream" id=9]
[ext_resource path="res://Sound/skt_gethit3.ogg" type="AudioStream" id=10]
[ext_resource path="res://Sound/skt_gethit2 (1).ogg" type="AudioStream" id=11]
[ext_resource path="res://addons/randomAudioStreamPlayer/random_audio_stream_player.gd" type="Script" id=12]
[ext_resource path="res://Scenes/Enemies/EnemySkeletonChasing.gd" type="Script" id=13]
[ext_resource path="res://addons/randomAudioStreamPlayer/random_audio_stream_player_2D.gd" type="Script" id=14]
[ext_resource path="res://Sound/step_lth1.ogg" type="AudioStream" id=15]
[ext_resource path="res://Sound/step_lth2.ogg" type="AudioStream" id=16]
[ext_resource path="res://Sound/step_lth33.ogg" type="AudioStream" id=17]
[ext_resource path="res://Sound/step_lth4.ogg" type="AudioStream" id=18]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 24, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 72, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 120, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 168, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 216, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 24, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 30, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 5 )
region = Rect2( 30, 0, 30, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 5 )
region = Rect2( 60, 0, 30, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 5 )
region = Rect2( 90, 0, 30, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 5 )
region = Rect2( 120, 0, 30, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 5 )
region = Rect2( 150, 0, 30, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 5 )
region = Rect2( 180, 0, 30, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 5 )
region = Rect2( 210, 0, 30, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 22, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 3 )
region = Rect2( 44, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 3 )
region = Rect2( 66, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 3 )
region = Rect2( 88, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 3 )
region = Rect2( 110, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 3 )
region = Rect2( 132, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 3 )
region = Rect2( 154, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 3 )
region = Rect2( 176, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 3 )
region = Rect2( 198, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 3 )
region = Rect2( 220, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 3 )
region = Rect2( 242, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 3 )
region = Rect2( 264, 0, 22, 33 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 4 )
region = Rect2( 43, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 4 )
region = Rect2( 86, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 4 )
region = Rect2( 129, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 4 )
region = Rect2( 172, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 4 )
region = Rect2( 215, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 4 )
region = Rect2( 258, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 4 )
region = Rect2( 301, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 4 )
region = Rect2( 344, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 4 )
region = Rect2( 387, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 4 )
region = Rect2( 430, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 4 )
region = Rect2( 473, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 4 )
region = Rect2( 516, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 4 )
region = Rect2( 559, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 4 )
region = Rect2( 602, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 4 )
region = Rect2( 645, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 4 )
region = Rect2( 688, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 4 )
region = Rect2( 731, 0, 43, 37 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 6 )
region = Rect2( 33, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 6 )
region = Rect2( 66, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 6 )
region = Rect2( 99, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 6 )
region = Rect2( 132, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 6 )
region = Rect2( 165, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 6 )
region = Rect2( 198, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 6 )
region = Rect2( 231, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 6 )
region = Rect2( 264, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 6 )
region = Rect2( 297, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 6 )
region = Rect2( 330, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 6 )
region = Rect2( 363, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 6 )
region = Rect2( 396, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 6 )
region = Rect2( 429, 0, 33, 32 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 6 )
region = Rect2( 462, 0, 33, 32 )

[sub_resource type="SpriteFrames" id=66]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": false,
"name": "Idle",
"speed": 10.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": false,
"name": "GetHit",
"speed": 10.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ) ],
"loop": true,
"name": "Walk",
"speed": 10.0
}, {
"frames": [ SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ) ],
"loop": false,
"name": "Attack",
"speed": 10.0
}, {
"frames": [ SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ) ],
"loop": false,
"name": "Death",
"speed": 10.0
} ]

[sub_resource type="Animation" id=67]
resource_name = "Hit"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/hit_opacity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="RectangleShape2D" id=68]
extents = Vector2( 9, 13.25 )

[sub_resource type="RectangleShape2D" id=69]
extents = Vector2( 10.5014, 15.4946 )

[sub_resource type="RectangleShape2D" id=70]
extents = Vector2( 13.0402, 14.6136 )

[sub_resource type="CircleShape2D" id=71]
radius = 100.0

[node name="EnemySkeleton" type="KinematicBody2D"]
collision_layer = 68
collision_mask = 68
script = ExtResource( 13 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 0.74902, 0.392157, 0.392157, 1 )
material = ExtResource( 7 )
position = Vector2( 3, 0 )
scale = Vector2( -1, 1 )
frames = SubResource( 66 )
animation = "Attack"
frame = 17

[node name="Effects" type="AnimationPlayer" parent="."]
anims/Hit = SubResource( 67 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3.75 )
shape = SubResource( 68 )

[node name="RayCast2D_Down" type="RayCast2D" parent="."]
position = Vector2( -22, -21.882 )
enabled = true
collision_mask = 2

[node name="RayCast2D_Side" type="RayCast2D" parent="."]
position = Vector2( -6.25, 0 )
enabled = true
cast_to = Vector2( -20, 0 )
collision_mask = 2

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 5, 2.77 )
shape = SubResource( 68 )

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2( -10, -1.589 )
shape = SubResource( 69 )

[node name="AttackDetector" type="Area2D" parent="." groups=[
"Skeleton",
]]
collision_layer = 0
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDetector"]
position = Vector2( -10, 0 )
shape = SubResource( 70 )
disabled = true

[node name="ChaseDetectionRadius" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChaseDetectionRadius"]
shape = SubResource( 71 )

[node name="AttackAreaDelay" type="Timer" parent="."]
one_shot = true

[node name="AttackAreaDelay2" type="Timer" parent="."]

[node name="PlayerDetectorDelay" type="Timer" parent="."]

[node name="TurnTimer" type="Timer" parent="."]
one_shot = true

[node name="ChaseDetectionDelay" type="Timer" parent="."]
one_shot = true

[node name="Skt_meleesound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="Deathsound1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -10.0

[node name="Skt_gettinghit" type="AudioStreamPlayer" parent="."]
volume_db = -10.0
script = ExtResource( 12 )
samples = [ ExtResource( 2 ), ExtResource( 11 ), ExtResource( 10 ) ]
random_strategy = 2

[node name="Skt_Walking" type="AudioStreamPlayer2D" parent="."]
volume_db = -20.0
max_distance = 500.0
script = ExtResource( 14 )
samples = [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ) ]
random_strategy = 2
random_volume_range = 10.0

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="animation_finished" from="Effects" to="." method="_on_Effects_animation_finished"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_entered" from="AttackDetector" to="." method="_on_AttackDetector_body_entered"]
[connection signal="body_entered" from="ChaseDetectionRadius" to="." method="_on_ChaseDetectionRadius_body_entered"]
[connection signal="body_exited" from="ChaseDetectionRadius" to="." method="_on_ChaseDetectionRadius_body_exited"]
[connection signal="timeout" from="AttackAreaDelay" to="." method="_on_AttackAreaDelay_timeout"]
[connection signal="timeout" from="AttackAreaDelay2" to="." method="_on_AttackAreaDelay2_timeout"]
[connection signal="timeout" from="PlayerDetectorDelay" to="." method="_on_PlayerDetectorDelay_timeout"]
[connection signal="timeout" from="TurnTimer" to="." method="_on_TurnTimer_timeout"]
[connection signal="timeout" from="ChaseDetectionDelay" to="." method="_on_ChaseDetectionDelay_timeout"]
